--- a/lecture10/lecture10-create_SG.yml
+++ b/lecture10/lecture10-create_SG.yml
@@ -1,6 +1,9 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: Security_Layer Template
 
+settings:
+  !include lecture10/lecture10-create_NW.yml
+
 Parameters:
   MyCidrIp:
     NoEcho: true
